[package]
name = "learn_proc_macro_derive"
version = "0.1.0"
edition = "2021"
description = "A Rust library crate that provides a procedural macro for learning purposes."
license = "MIT OR Apache-2.0"
repository = "https://github.com/roynrishingha/learn-proc-macro"

[lib]
name = "learn_proc_macro_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
